# Lilith-Shell

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml
misc/: README.md
src/lilith_shell/: __init__.py  executor.py  server.py
src/pandoras_shell/: executor.py  server.py
src/skynet_terminal/: executor.py
tests/: __init__.py  test_basics.py
warning/: README.md
