[project]
name = "Skynet-Terminal"
version = "0.1.0"
description = "MCP server enabling AI terminal command execution"
authors = [
    {name = "Christian Hägg", email = "zelaron@gmail.com"}
]
license = "MIT"
dependencies = [
    "mcp-sdk>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true